--- a/index.html
+++ b/index.html
@@ -7,7 +7,30 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Simple Kanban Board</h1>
+
+    <div class="board">
+      <!--List 1-->
+      <div class="list" id="list1">
+        <h2>To Do</h2>
+        <div class="card" draggable="true" id="card1">Wash dishes</div>
+        <div class="card" draggable="true" id="card2">Buy groceries</div>
+      </div>
+      <!--List 2-->
+      <div class="list" id="list2">
+        <h2>In Progress</h2>
+        <div class="card" draggable="true" id="card3">Learn to code</div>
+        
+      </div>
+      <!--List 3-->
+      <div class="list" id="list3">
+        <h2>Done</h2>
+      </div>
+    </div>
+
+
+  </div>
 
   <script src="script.js"></script>
 </body>
