Add add card button with css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1>Simple Kanban Board</h1>
-
+    <button class="add-card-btn">Add card</button>
     <div class="board">
       <!--List 1-->
       <div class="list" id="list1">
